--- a/docs/05.关于/01.关于.md
+++ b/docs/05.关于/01.关于.md
@@ -10,7 +10,7 @@ author:
 ---
 
 ## 📚Blog
-这是一个兼具博客文章、知识管理、文档查找的个人网站，主要内容是Web前端技术。如果你喜欢这个博客&主题欢迎到[GitHub](https://github.com/xugaoyi/vuepress-theme-vdoing)点个Star，或者交换[友链](/friends/) ( •̀ ω •́ )✧
+这是一个兼具博客文章、知识管理、文档查找的个人网站，主要内容是后端技术。如果你喜欢这个博客&主题欢迎到[GitHub](https://github.com/wenby545/HeartBlog)点个Star，或者交换[友链](/https://tophub.today//) ( •̀ ω •́ )✧
 
 :::tip
 文章内容仅是我个人的小总结，资历尚浅，如有误还请指正。
@@ -38,36 +38,26 @@ author:
 
 
 ## 🐼Me
-web前端小学生
+后端菜鸟
 
 ### 技能
 * 熟悉 JavaScript、HTML、CSS、Vue、React 的拼写
 * 了解 Linux、windows、macOS 的开关机方式
 * 精通 Git 的 pull 和 push，并注册了 GitHub 帐号刷了一些 star
 
-<!-- 本人↓↓↓
-
-<img src='https://cdn.jsdelivr.net/gh/xugaoyi/image_store/blog/20200103123203.jpg' alt='本人照片' style="width:106px;"> -->
-
-## 前端学习
-<br/>
-<img src="https://open.weixin.qq.com/qr/code?username=gh_0cf4b813918c"  style="width:100px;" />
-
-关注公众号，回复`前端资源`，即可获取这些 [前端学习资源](https://github.com/xugaoyi/blog-gitalk-comment/wiki/Front-end-Study)。
 
 ## :email: 联系
 
 - WeChat or QQ: <a :href="qqUrl" class='qq'>{{ QQ }}</a>
-- Email:  <a href="mailto:894072666@qq.com">894072666@qq.com</a>
-- GitHub: <https://github.com/xugaoyi>
+- Email:  <a href="mailto:1239404869@qq.com">1239404869@qq.com</a>
+- GitHub: <https://github.com/wenby545>
 - Vdoing主题文档：<https://doc.xugaoyi.com>
-- Vdoing交流QQ群：694387113
 
 <script>
   export default {
     data(){
       return {
-        QQ: '894072666',
+        QQ: '1239404869',
         qqUrl: `tencent://message/?uin=${this.QQ}&Site=&Menu=yes`
       }
     },
